css/index.css
*{
    font-family: cursive;
    margin: 0px;
    padding: 0px;
    overflow-x:hidden;
    scroll-behavior: smooth;
  }

/* Styling Navigation Bar*/
#navBar{
  padding: 30px;

  display: flex;
  color: white;
  position: relative;
}
.navBarItem{
  margin-left: auto;
}

#navBar a{
  text-decoration: none;
  margin: 0px 8px;
  color: white;
  
  transition: all 1s;
}
#navBar a:hover{
  color: black;
  background: white;
 padding: 0px 5px;
  border-radius: 30px;
  font-size: 2em;
}
#mNH h2{
  margin: 0px;
  padding: 5px;
  transition: all 2s;
  color:black;
}
#mNH h2:hover{
  background: black;
  color: white;
  padding: 2px 5px;
  border-radius: 40px;
  font-size: 2rem;

}

home {
  margin-top: -11vh;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  justify-content: center;
  align-items: center;
}

home h3{
  /* transition: all .s; */
  padding:   15px;
  color: #f4623a;
  position: relative;
}

#sub::before{
  height: 100%;
  left: -20%;
  top: 0;
  position: absolute;
  z-index: -1;
  content:"";
  width: 0;
}

#sub:hover{
  border-radius: 25px;
  color: white;
}

#sub:hover:before{
  
  height: 100%;
  content: "";
  animation: h3Animation 2.5s 1 forwards;
   width: 60%;
}

@keyframes h3Animation {
  from{

  }to{
    transform: skew(50deg) ;
    transform-origin: top right;
    background:  #f4623a; 
  
    overflow: hidden;
  }
  
}


#mainHeading{
  font-size: 6rem;
   text-align: center;
  border-radius: 25px;
  padding: 2px;
  word-spacing: 20px;
  position: relative;
  margin-left: 24px;
  background:-webkit-linear-gradient(-30deg,#000 29%, #FFF 54%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

body::before {
  background: -webkit-linear-gradient(-30deg, #FFF 50%, #000 50%);
  z-index: -1;
  content: "";
  opacity: .95;
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0px;
  left: 0px;
}



/*
Styling Education Section 
*/
Education {
  margin-top: -1.3rem;
  height: 95vh;
  min-width: 100%;
  width: 100vw;
  display: flex ;
  flex-direction: column;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  background: -webkit-linear-gradient(31deg, #f4623a 50%, #FFF 50%);
  flex-wrap: wrap;
}
Education img{
  transition: all 1s;
}
Education img:hover{

  transform:rotate(360deg);

}
Education h2 {
  margin: -60px 0 15px 0;
  font-size: 3rem;
  transition: all 1s;

}
Education h2:hover{
  transform:scale(1.2);
  margin: 20px;
  box-sizing: border-box;
background: -webkit-linear-gradient(35.5deg, #FFF 50%, #f4623a 50%);
color: black;
padding: 10px;
border-radius: 30px;
}

.educationContainer {
  display: flex;
  margin: 0px;
  justify-content: center;

}

.educationContainer section{
  flex-direction: column;
  margin: 4rem 5rem;

align-items: center;
  justify-content: center;
  text-align: center;
  
}
.vertical h3{
  color: black;
  font-size: 2rem;
}

.vertical a{
  text-decoration: none;
}

#cHr{
  width: 25vw;

}

/*
Styling Github Section 
*/

Github {
  display: flex;
  min-width: 100%;
  min-height: 95vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: black;
  background: -webkit-linear-gradient(-32deg, #FFF 50%, #808080 50%);
  font-size: 2rem;

}
.gitHeader{
  margin-top: 25px;
  display: flex;
  flex-direction: row;
}
Github a {
  text-decoration: none;
  color: black;
}

Github h2 {
  margin: 20px;
}

#GitHubLogo {
margin-right: 20px;
  height: 90px;
  width: 90px;
  transition: all 1s;
  
}
#GitHubLogo:hover{
  transform: scale(.5);
}
.githubContainer {
  display: flex;
  align-items: center;
  justify-content: center;
}

.githubVertical {
  text-align: center;
  margin: 10px 20px;
  padding: 10px;
  flex-direction: column;
  color: black;
  font-size: 1rem;
  max-width: 26%;
  min-width: 26%;
}

.githubVertical img {
  height: 200px;
  width: 200px;
  padding: 40px;
  transition: all 1s;
}

.githubVertical img:hover{
  transform: scale(1.5);
}

.gitPara{
  margin-top: 10px;
  text-align: center;
  font-size: 1rem;
  font-family: 'Times New Roman', Times, serif;
  transition: all 500ms;
}

.gitPara:hover{
  font-size: 2em;
  color: black;
  padding: 10px;
  background: white;
  border-radius: 45px;
}

/*
Styling Contact Section 
*/
Contact{
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 2rem;
}
.contactContainer{
flex-direction: column;
align-items: center ;
flex-wrap: wrap;
margin-bottom: 100px;
}
.contactForm{
  width: 50%;
  margin: 10px 25%;
  font-size: 1.5rem;
  text-align: center;
}
.submitButton{
  margin: 10px 48%;
  padding: 10px 20px;
  background-color: #f4623a;
  color: white;
  border-radius: 25px;
}
Contact img {
  height: 120px;
  width: 120px;
  margin: 10px 50px;
}
Contact p{
  margin-top: -100px;
}

.otherContact {

  display: flex;
  flex-wrap: wrap;
}

.contactVertical {
  flex-direction: column;
  overflow: hidden;
  box-sizing: border-box;
}

.contactVertical a{
  display: flex;
  margin-top: -15px;
  text-decoration: none;
  justify-content: center;
  color: #f4623a;
}


Contact p{
 text-align: center;
 border: 2px solid black; 
}

/*
Styling Footer 
*/

footer{
  background: black;
  text-align: center;
  color: white;
}

@media (max-width:768px) {
  #mainHeading{
    font-size: 2rem;
     text-align: center;
  }
  nav{
    display: flex;
    justify-content: center;
  }
  #navBar{
    width: fit-content;
    padding: 0px;
    flex-direction: column;
    align-items: center;
    margin: 10px 2px;
  
  }
  #navBar a{
    color: black;
  }
  #navBar h2{
    width: fit-content;
    height: fit-content;
    margin-bottom: 10px !important;
  }
  #mNH h2{
    transition: all 500ms;
  }
  #mNH h2:hover{
    color: black;
    margin-top: 10px;
    background: white;
    padding: 2px 5px;
    border-radius: 30px;
    font-size: 1em;
  
  }

  home h3{
    transition: all 500ms;
  
  }
  home h3:hover{
    padding: 5px 5px;
    font-size: .7rem;
    border-radius: 10px ;
    color: black;
    background: -webkit-linear-gradient(-30deg, #f4623a 50%, #FFF 50%);
  
  }

  .navBarItem{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    
  }
  Education{
    margin-top: -1.5rem;
    flex-wrap: nowrap;
    height: fit-content;
  }

  Education h2:hover{
    transform:scale(1.1);
    margin: 20px;
    box-sizing: border-box;
    background:-webkit-linear-gradient(-30deg,#f4623a 29%, #FFF 54%);
  color: black;
  padding: 20px;
  border-radius: 30px;
  }
  

  .educationContainer {
     display: flex;
     flex-direction: column;

}

.githubContainer{
  display: flex;
  flex-direction: column;
  align-content: center;
  
}
.githubVertical{
  width: fit-content;
  height: fit-content;
  padding: 30px 100px;
}
.githubVertical img{
  margin: -10px -200px;
  padding: 10px;
}

#GitHubLogo{
  margin-right: 0px;
  height: 45px;
  width: 45px;
}
.gitHeader h2{
  font-size: 2rem;
  margin-top: -.1rem;
}
.gitPara{
  width: 80%;
  margin: 0px 10%;
  text-align: justify;
  margin-right: 900px;

}

.contactForm{
  font-size: 1rem;
}
.submitButton{
  margin: 10px 35%;
}

Contact p{
  text-align: center;
  font-size: 1rem;
  border: 2px solid black; 
 }

.otherContact{
  display: flex;
flex-direction: row;

}
.otherContact a{
  font-size: 1rem;
  margin-top: -25px;
  margin-left: 20px;

}
.contactVertical img {
  height: 50px;
  width: 50px;
  padding: 20px;
  margin: 0px 13%;
}

   }

   
@media (max-width:390px) {
  #navBar ul a{
 font-size: .6rem;
  }
  home h3{
    font-size: 1rem;
  }
}
   

@media (max-width:1140px) {
  #navBar ul{
    
  flex-wrap: wrap; 
  }
  #navBar ul a{
   
    color: #f4623a;
  }
}

